cabal-version:      3.0
name:               react
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wunused-packages

library
  import:           warnings
  exposed-modules:
    React
    React.Component
    React.Element
    React.Export
    React.Hook
    React.JSaddle
    React.Misc
    React.Types

  build-depends:
      base
    , containers
    , jsaddle
    , mtl
    , template-haskell
    , text
  hs-source-dirs:
    src

  if impl(ghcjs)
    build-depends: ghcjs-base == 0.2.*
                  , ghcjs-prim
                  -- This is to allow the hashable patches to work
                  -- the hashable should to be pinned in reflex-platform
                  , hashable == 1.3.5.0
  else
    build-depends: jsaddle-warp

  default-language: Haskell2010
  default-extensions:
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
